# Mendix-Profiler

./: .gitignore
src/: MxProfiler.mpr  package.xml  project-settings.user.json
src-server/: Cargo.toml
src-server/src/: main.rs  microflow_execution.rs  profile_session.rs  profiler_client.rs
src/javasource/mxprofiler/actions/: JA_LogListener_Start.java  JA_LogListener_Stop.java  JA_Session_End.java  TryConnect.java  TryDisconnect.java  isConnected.java
src/javasource/mxprofiler/implementation/: DisconnectCallback.java  MicroflowExecutionLogSubscriber.java  TCPClient.java
src/widgets/: MicroflowTimer.mpk  com.mendix.widget.web.Combobox.mpk
