[package]
name = "mxlogger"
version = "0.1.0"
edition = "2021"

[dependencies]
inferno = "0.11.19"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.86"
log = "0.4.21"
env_logger = "0.11.3"
base64 = "0.22.1"

[profile.release]
# debug = 1
lto = true
# codegen-units = 1
strip = true
